# mySATsolver

./: README.md
src/: CMakeLists.txt  Solver.cpp  main.cpp
tests/: CMakeLists.txt  Solver.cpp  Solver.h  test_all.cpp
